package core.Maintenance.domain.Entities;

public class Maintenance {
}
