@startuml
set separator none
left to right direction

package "Domain" #DDDDDD {

    package "Repository" #DDDDDD {
        Interface DroneRepository <<Repository>> {
            + findBySerialNumber(serialNumber: SerialNumber) : Optional<Drone>
        }

        Interface MaintenanceRepository <<Repository>> {
            + findByDroneOrderedByDateDesc(drone: Drone) : List<Maintenance>
        }

        Interface RepositoryFactory <<Factory>> {
            - RepositoryFactory()
            + drones() : DroneRepository
            + maintenances() : MaintenanceRepository
        }
    }

    class Drone <<Entity>> <<root>> {
        + serialNumber : SerialNumber
        + model : Model
        + status : DroneStatus
        + language : DroneLanguage
    }

    class Maintenance <<Entity>> <<root>> {
        + date : Date
        + type : MaintenanceType
        + description : Description
        + technician : Name
    }

    ' Value Objects
    class SerialNumber <<Value Object>>
    class MaintenanceType <<Value Object>>
    class Description <<Value Object>>
    class Name <<Value Object>>
    class Date <<Value Object>>
    class DroneStatus <<Value Object>>
    class DroneLanguage <<Value Object>>
    class Model <<Entity>>
}

package "UI" #DDDDDD {
    class ListMaintenanceHistoryUI <<UI>> {
    }
}

package "Controller" #DDDDDD {
    class ListMaintenanceHistoryController <<Controller>> {
        + getMaintenanceHistory(serialNumber: SerialNumber) : List<Maintenance>
    }
}

package "persistence.impl.jpa" #DDDDDD {
    class JpaDroneRepository <<Repository>> {
        + findBySerialNumber(serialNumber: SerialNumber) : Optional<Drone>
    }

    class JpaMaintenanceRepository <<Repository>> {
        + findByDroneOrderedByDateDesc(drone: Drone) : List<Maintenance>
    }

    class JpaRepositoryFactory <<Factory>> {
        - JpaRepositoryFactory()
        + drones() : DroneRepository
        + maintenances() : MaintenanceRepository
    }
}

package "persistence.impl.inmemory" #DDDDDD {
    class InMemoryDroneRepository <<Repository>> {
        + findBySerialNumber(serialNumber: SerialNumber) : Optional<Drone>
    }

    class InMemoryMaintenanceRepository <<Repository>> {
        + findByDroneOrderedByDateDesc(drone: Drone) : List<Maintenance>
    }

    class InMemoryRepositoryFactory <<Factory>> {
        - InMemoryRepositoryFactory()
        + drones() : DroneRepository
        + maintenances() : MaintenanceRepository
    }
}

package "persistence" #DDDDDD {
    class PersistenceContext {
        + repositories() : RepositoryFactory
    }
}

' Relações
Drone --> "0..*" Maintenance : has
Drone --> Model : uses
Drone --> SerialNumber
Drone --> DroneStatus
Drone --> DroneLanguage

Maintenance --> MaintenanceType
Maintenance --> Date
Maintenance --> Description
Maintenance --> Name

RepositoryFactory ..> DroneRepository : drones()
RepositoryFactory ..> MaintenanceRepository : maintenances()

ListMaintenanceHistoryUI ..> ListMaintenanceHistoryController
ListMaintenanceHistoryController ..> RepositoryFactory : repositories()
ListMaintenanceHistoryController ..> DroneRepository : drones()
ListMaintenanceHistoryController ..> MaintenanceRepository : maintenances()
ListMaintenanceHistoryController ..> Drone : uses

DroneRepository ..> Drone : findBySerialNumber()
MaintenanceRepository ..> Drone : findByDroneOrderedByDateDesc()

PersistenceContext ..> JpaRepositoryFactory : JpaRepositoryFactory()
PersistenceContext ..> InMemoryRepositoryFactory : InMemoryRepositoryFactory()

JpaRepositoryFactory ..|> RepositoryFactory
JpaRepositoryFactory ..> JpaDroneRepository
JpaRepositoryFactory ..> JpaMaintenanceRepository

JpaDroneRepository ..|> DroneRepository
JpaMaintenanceRepository ..|> MaintenanceRepository

InMemoryRepositoryFactory ..|> RepositoryFactory
InMemoryRepositoryFactory ..> InMemoryDroneRepository
InMemoryRepositoryFactory ..> InMemoryMaintenanceRepository

InMemoryDroneRepository ..|> DroneRepository
InMemoryMaintenanceRepository ..|> MaintenanceRepository

@enduml
